--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "hackmyresume": "^1.8.0",
     "jsonresume-theme-classy": "^1.0.9",
+    "jsonresume-theme-flat": "^0.3.7",
     "resume-cli": "^0.4.11"
   }
 }
