--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "./node_modules/.bin/hackmyresume build resume.json index.html --theme node_modules/jsonresume-theme-flat",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jonathan Greenemeier <Jon@6eDesign.net> (https://github.com/6edesign)",
@@ -12,6 +13,7 @@
     "hackmyresume": "^1.8.0",
     "jsonresume-theme-classy": "^1.0.9",
     "jsonresume-theme-flat": "^0.3.7",
+    "npm-run-all": "^4.1.3",
     "resume-cli": "^0.4.11"
   }
 }
