--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/hackmyresume build resume.json index.html --theme node_modules/jsonresume-theme-flat",
+    "build": "hackmyresume build resume.json index.html --theme node_modules/jsonresume-theme-flat",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jonathan Greenemeier <Jon@6eDesign.net> (https://github.com/6edesign)",
